# oregon-trail

./: .gitignore  README.md  pyproject.toml
src/oregon_trail/: __init__.py  cli.py  game.py
tests/: conftest.py  test_game.py
web/: oregonTrail.js
