[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oregon-trail"
version = "0.1.0"
description = "A text-based recreation of the classic Oregon Trail experience."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Oregon Trail Dev Team"}]
dependencies = []

[project.scripts]
oregon-trail = "oregon_trail.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
